[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-orbit-interface2D"
version = "0.0.1"

authors = [
    { name = "Timothe Fagart", email = "timothe.fagart@inria.fr" }
]

description = "Local application to visualize potential limit cycles obtained from a 2D piecewise affine differential equation system"
readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "platformdirs>=2.5"
]

license = { text = "MIT" }

keywords = [
    "dynamical-systems",
    "limit-cycles",
    "piecewise-affine",
    "visualization",
    "tkinter"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/tfagart64/periodic-orbit-interface2D"
Repository = "https://github.com/tfagart64/periodic-orbit-interface2D"



[tool.setuptools.packages.find]
where = ["."]

